<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/acceder_sans_me_connecter_text"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/m_inscrire_text"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="sans-serif"
        android:text="@string/restoche_title_text"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/borderradius"
        android:ems="10"
        android:hint="@string/email_example"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/borderradius"
        android:ems="10"
        android:hint="@string/password_example"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="56dp"
        android:text="@string/remember_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="256dp"
        android:layout_height="83dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="78dp"
        android:text="@string/connect_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        android:background="@drawable/borderadiuswithoutcolor" />

</androidx.constraintlayout.widget.ConstraintLayout>